<resources>
    <string name="app_name">SISAP Móvil</string>
    <string name="title_solicitudes">Solicitudes</string>
    <string name="title_incidencias">Incidencias</string>
    <string name="title_folio_detail">Detalle de Folio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tag">Titulo:</string>
    <string name="system_tag">Sistema:</string>
    <string name="description_tag">Descripción:</string>
    <string name="status_tag">Estatus:</string>
    <string name="category_tag">Categoria:</string>
    <string name="priority_tag">Prioridad:</string>
    <string name="sox_tag">Sox:</string>
    <string name="id_folio_extra">ID_FOLIO_EXTRA</string>
    <string name="id_employee_extra">ID_EMPLOYEE_EXTRA</string>
    <string name="detail_folio_parcel">detail_folio_parcel</string>
    <string name="detail_tab_title">DETALLE</string>
    <string name="work_team_tab_title">EQUIPO DE TRABAJO</string>
    <string name="committee_members_tab_tilte">COMITE</string>
    <string name="documents_tab_title">DOCUMENTOS</string>
    <string name="coments_tab_title">COMENTARIOS</string>
    <string name="uploaded_date">Última actualización: %s</string>
    <string name="full_name_formated">%s %s %s</string>
    <string name="status_title_formated">Estatus: %s</string>
    <string name="assignment_date_title">Fecha Asignación:</string>
    <string name="deadline_title">Fecha Cierre:</string>
    <string name="days_passed_title">Días transcurridos:</string>
    <string name="modification_user_title">Usuario modificación:</string>
    <string name="comment_title">Comentario:</string>
    <string name="historical_tab_title">HISTÓRICO</string>
    <string name="classification_tag">CLASIFICACIÓN</string>
    <string name="assignment_tag">ASIGNACIÓN</string>
    <string name="authorization_tag">AUTORIZACIÓN</string>
    <string name="categorization_tag">CATEGORIZACIÓN</string>
    <string name="survey_tag">ENCUESTA DE SERVICIO</string>
    <string name="classify_folio_button">CLASIFICAR FOLIO</string>
    <string name="assignment_resources_button">ASIGNAR RECURSOS</string>
    <string name="system_title">Sistema</string>
    <string name="module_title">Módulo</string>
    <string name="complexity_title">Complejidad</string>
    <string name="type_title">Tipo</string>
    <string name="priority_title">Prioridad</string>
    <string name="boss_title">Jefe</string>
    <string name="no_value_selected">N/A</string>
    <string name="accept_button">ACEPTAR</string>
    <string name="cancel_button">CANCELAR</string>
    <string name="date_title">Fecha</string>
    <string name="project_manager_title">Encargado del proyecto</string>
    <string name="select_all_resources">Seleccionar todos los recursos</string>
    <string name="download_file">Descargar archivo</string>
    <string name="downloading">Descargando</string>
</resources>