<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.telcel.gsa.sisap.ui.classification.ClassificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/system_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/system_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/system_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/system_classification_title"
            app:layout_constraintStart_toStartOf="@id/system_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_system"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/system_classification"
            style="@style/DiviverStyle"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/module_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/module_title"
            app:layout_constraintTop_toTopOf="@id/divider_system"
            app:layout_constraintStart_toStartOf="@id/system_classification"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/module_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/module_classification_title"
            app:layout_constraintStart_toStartOf="@id/module_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_module"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/module_classification"
            style="@style/DiviverStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/complexity_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/complexity_title"
            app:layout_constraintTop_toTopOf="@id/divider_module"
            app:layout_constraintStart_toStartOf="@id/module_classification"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/complexity_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/complexity_classification_title"
            app:layout_constraintStart_toStartOf="@id/complexity_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_complexity"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/complexity_classification"
            style="@style/DiviverStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/type_title"
            app:layout_constraintTop_toTopOf="@id/divider_complexity"
            app:layout_constraintStart_toStartOf="@id/complexity_classification"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/type_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/type_classification_title"
            app:layout_constraintStart_toStartOf="@id/type_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_type"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/type_classification"
            style="@style/DiviverStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priority_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/priority_title"
            app:layout_constraintTop_toTopOf="@id/divider_type"
            app:layout_constraintStart_toStartOf="@id/type_classification"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priority_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/priority_classification_title"
            app:layout_constraintStart_toStartOf="@id/priority_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_priority"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/priority_classification"
            style="@style/DiviverStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/boss_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/boss_title"
            app:layout_constraintTop_toTopOf="@id/divider_priority"
            app:layout_constraintStart_toStartOf="@id/priority_classification"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/boss_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/boss_classification_title"
            app:layout_constraintStart_toStartOf="@id/boss_classification_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_boss"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/boss_classification"
            style="@style/DiviverStyle"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_classification_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/date_title"
            app:layout_constraintTop_toTopOf="@id/divider_boss"
            app:layout_constraintStart_toStartOf="@id/boss_classification"
            app:showDateInput="@{viewmodel.priority}"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date_classification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/date_classification_title"
            app:layout_constraintStart_toStartOf="@id/date_classification_title"
            app:showDateInput="@{viewmodel.priority}"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_date"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/date_classification"
            app:showDateInput="@{viewmodel.priority}"
            style="@style/DiviverStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/classify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/classify_folio_button"
            android:onClick="@{() -> viewmodel.postClassification()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:sendClassification="@{viewmodel.enableClick}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
