<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.telcel.gsa.sisap.ui.assignment.AssignmentViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/project_manager_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/project_manager_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.Body"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/project_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_value_selected"
            app:layout_constraintTop_toBottomOf="@id/project_manager_title"
            app:layout_constraintStart_toStartOf="@id/project_manager_title"
            tools:text="N/A"
            style="@style/Subtitle.Value"/>
        <View
            android:id="@+id/divider_project_manager"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/project_manager"
            style="@style/DiviverStyle"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/team_members_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:teamMembersListData="@{viewmodel.teamMemberList.teamMemberList}"
            app:layout_constraintTop_toBottomOf="@id/divider_project_manager"
            app:layout_constraintBottom_toTopOf="@id/assignment_button"
            tools:listitem="@layout/team_member_item"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/assignment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/assignment_resources_button"
            android:onClick="@{() -> viewmodel.postAssignment()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/team_members_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:canDoAssignment="@{viewmodel.enableClick}"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>