<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.telcel.gsa.sisap.ui.description.DescriptionViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background">

        <!-- Title -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            app:layout_constraintEnd_toStartOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@{viewModel.folioDetail.title}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_tag"
            app:layout_constraintTop_toTopOf="@id/title_tag"
            tools:text="@tools:sample/lorem" />
        <!-- System -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/system_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/system"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/system"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/system"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.folioDetail.systemString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/system_tag"
            app:layout_constraintTop_toBottomOf="@id/title"
            tools:text="@tools:sample/lorem" />
        <!-- Description -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/description"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.folioDetail.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/description_tag"
            app:layout_constraintTop_toBottomOf="@id/system"
            tools:text="@tools:sample/lorem" />
        <!-- Status -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/status"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.folioDetail.status}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status_tag"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="@tools:sample/lorem" />
        <!-- Categoria -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/category"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.complexityString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/category_tag"
            app:layout_constraintTop_toBottomOf="@id/status"
            tools:text="@tools:sample/lorem" />
        <!-- Prioridad -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priority_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/priority"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/priority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.priorityString}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/priority_tag"
            app:layout_constraintTop_toBottomOf="@id/category"
            tools:text="@tools:sample/lorem" />
        <!-- SOX -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sox_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sox_tag"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@id/sox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sox"
            style="@style/TextAppearance.TitleInline"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@{viewModel.folioDetail.sox}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sox_tag"
            app:layout_constraintTop_toBottomOf="@id/priority"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
