<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="actionHistorical"
            type="com.telcel.gsa.sisap.ui.network.ActionHistorical"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/status_historical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/color_secondary"
            android:text="@{actionHistorical.status}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Encuesta de servicio"
            style="@style/TextAppearance.Title"/>

        <TextView
            android:id="@+id/assignment_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/assignment_date_title"
            app:layout_constraintTop_toBottomOf="@id/status_historical"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/TextAppearance.TitleInline"/>

        <TextView
            android:id="@+id/assignment_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@{actionHistorical.assignmentDate}"
            app:layout_constraintTop_toTopOf="@id/assignment_date_title"
            app:layout_constraintBottom_toBottomOf="@id/assignment_date_title"
            app:layout_constraintStart_toEndOf="@+id/assignment_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="04/03/2021"
            style="@style/TextAppearance.Body"/>

        <TextView
            android:id="@+id/closure_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@string/deadline_title"
            app:layout_constraintTop_toBottomOf="@id/assignment_date_title"
            app:layout_constraintStart_toStartOf="@id/assignment_date_title"
            style="@style/TextAppearance.TitleInline"/>

        <TextView
            android:id="@+id/closure_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@{actionHistorical.deadLine}"
            app:layout_constraintTop_toTopOf="@id/closure_date_title"
            app:layout_constraintBottom_toBottomOf="@id/closure_date_title"
            app:layout_constraintStart_toEndOf="@id/closure_date_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="05/03/2021"
            style="@style/TextAppearance.Body"/>

        <TextView
            android:id="@+id/days_passed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@string/days_passed_title"
            app:layout_constraintTop_toBottomOf="@id/closure_date_title"
            app:layout_constraintStart_toStartOf="@id/closure_date_title"
            style="@style/TextAppearance.TitleInline"/>

        <TextView
            android:id="@+id/days_passed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@{Integer.toString(actionHistorical.daysPassed)}"
            app:layout_constraintTop_toTopOf="@id/days_passed_title"
            app:layout_constraintBottom_toBottomOf="@id/days_passed_title"
            app:layout_constraintStart_toEndOf="@id/days_passed_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="1"
            style="@style/TextAppearance.Body"/>

        <TextView
            android:id="@+id/modification_user_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:text="@string/modification_user_title"
            app:layout_constraintTop_toBottomOf="@id/days_passed_title"
            app:layout_constraintStart_toStartOf="@id/days_passed_title"
            style="@style/TextAppearance.TitleInline"/>

        <TextView
            android:id="@+id/modification_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@{actionHistorical.modificationUser}"
            app:layout_constraintTop_toTopOf="@id/modification_user_title"
            app:layout_constraintBottom_toBottomOf="@id/modification_user_title"
            app:layout_constraintStart_toEndOf="@id/modification_user_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Josep German Bernal Fuentes"
            style="@style/TextAppearance.Body"/>

        <TextView
            android:id="@+id/historical_comment_title"
            style="@style/TextAppearance.TitleInline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/comment_title"
            app:layout_constraintStart_toStartOf="@id/modification_user_title"
            app:layout_constraintTop_toTopOf="@id/historical_comment" />

        <TextView
            android:id="@+id/historical_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="@dimen/medium_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@{actionHistorical.comment}"
            app:layout_constraintTop_toBottomOf="@id/modification_user"
            app:layout_constraintStart_toEndOf="@id/historical_comment_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Se procede a cierre de folio"
            style="@style/TextAppearance.Body"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>